<resources>
    <string name="app_name">Contas</string>
    <string name="title_activity_tela_incial_lista_conta" translatable="false">activity_tela_incial_lista_conta</string>
    <string name="saldo">Saldo</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="atualizar">Atualizar</string>
    <string name="mensagemAvisoApagar">Deseja realmente deletar conta de: </string>
    <string name="mensagemAvisoApagarMaisDeUmaConta">Deseja realmente deletar mais de uma conta? </string>
    <string name="mensagemRetornarValorContaSaldo">Deseja retornar o valor da conta para o saldo?</string>
    <string name="mensagemRetornarValorTodasAsContaSaldo">Deseja retornar o valor de todas as contas selecionadas para seu saldo?</string>
    <string name="mensagemAvisoApagarTodasContas">Deseja realmente deletar todas suas contas? &#10; isso ira apagar seu usuário também</string>
    <string name="mensagemAvisoTodasContasExcluida">Suas contas foram excluidas!</string>
    <string name="mensagemCrieUsuarioParaAdicionarConta">Crie um usuário para adicionar uma conta</string>
    <string name="mensagemCrieUsuarioParaGerarPdf">Crie um usuário para gerar um PDF</string>
    <string name="mensagemDataEstaErrada">Data está errada</string>
    <string name="mensagemCampoVazio">Preencha o campo nome ou valor</string>
    <string name="mensagemNomeUsuarioObrigatorio">Nome do usuário é obrigatório</string>>
    <string name="mensagemSaldoUsuarioObrigatorio">Saldo do usuário é obrigatório</string>
    <string name="mensagemErroCriarUsuario">Erro ao criar usuário</string>
    <string name="mensagemAvisoPdfCriado">Seu PDF foi criado na pasta de Download!</string>
    <string name="mensagemAvisoPdfErro">Erro ao criar PDF. Verifique as permissões do aplicativo.</string>
    <string name="confirmacao">Confirmação</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="retornaValorContaSaldo">Deseja retornar o valor da conta para o saldo?</string>
    <string name="msgLocalSalvo">Local salvo:</string>
    <string name="msgPdfGerado">PDF gerado com sucesso: </string>
    <string name="msgErroPdfGerado">Erro ao gerar PDF: </string>
    <string name="totalComEspaco">"Total:  "</string>
    <string name="cifra">R$:</string>
    <string name="textViewSaldoTelaList">Saldo: R$</string>
    <string name="textViewNomeDaConta">Nome da conta</string>
    <string name="textViewNomeDaContaFormatoListaAdicao">Nome do valor recebido</string>
    <string name="contaDeLuzHint">Conta de luz</string>
    <string name="salarioTrabalho">Salario</string>
    <string name="textViewValorDaConta">Valor da conta</string>
    <string name="textViewValorDaContaFormatoListaAdicao">Valor recebido</string>
    <string name="textViewDataQueFoiGasto">Data que foi gasto</string>
    <string name="editTextDateHint">dd/mm/aaaa</string>
    <string name="textViewSobreInformacaoPdf">" O aplicativo precisa de permissão para escrever um arquivo Pdf onde ira informar todas as suas contas.  O arquivo pdf sera escrito na sua pasta de Download.  Caso tenha senha seu gerenciamento de arquivos o aplicativo pode ter problema para criar o arquivo."</string>
    <string name="btnDeletarTodasAsConta">Deletar todas as contas</string>
    <string name="btnCriarPdf">Criar PDF</string>
    <string name="textViewNomeUsuario">Nome</string>
    <string name="textViewSaldoUsuario">Saldo</string>
    <string name="textViewSobreInformacaoAplicativo">" O aplicativo foi projetado para simplificar o controle das suas finanças.  Basta inserir um valor inicial na tela principal e começar a adicionar suas despesas.  O aplicativo irá deduzir automaticamente esses gastos do valor que você estipulou, proporcionando um acompanhamento preciso e conveniente das suas finanças."</string>
    <string name="menuItemEditarConta">Atualizar conta</string>
    <string name="menuItemDeletarConta">Deletar</string>
    <string name="menu_nova_conta">Adicionar várias conta</string>
    <string name="menu_usuario">Usuário</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_criar_pdf">Criar PDF</string>
    <string name="menu_selecionar_exclusao">Selecionar para excluir</string>
    <string name="menu_excluir_selecionadas">Excluir selecionadas</string>
    <string name="menu_selecionar_todos">Selecionar todos</string>
    <string name="menu_limpar_selecao">Limpar seleção</string>
    <string name="menu_cancelar_selecao">Cancelar seleção</string>
    <string name="titulo_modo_selecao">Selecione as contas</string>
    <string name="titulo_selecao_contas">%1$d selecionadas</string>
    <string name="ver_documentos">Ver Documentos</string>

    <string name="nao_foi_possivel_abrir_o_documento">Não foi possivel abrir o documento!</string>
    <string name="arquivo_deletado_com_sucesso">Arquivo deletado com sucesso!</string>
    <string name="falha_ao_deletar_o_arquivo">Falha ao deletar o arquivo!</string>
    <string name="arquivo_nao_encontrado">Arquivo não encontrado!</string>
    <string name="erro_ao_deletar_o_arquivo">Erro ao deletar o arquivo: </string>


    <string name="appwidget_textConta">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Monitore seu saldo</string>


    <string name="ordenarDataDesc">Ordenar por data maior  </string>
    <string name="ordenarDataAsc">Ordenar por data menor  </string>
    <string name="ordenarNomeDesc">Ordenar por nome A - Z  </string>
    <string name="ordenarNomeAsc">Ordenar por nome Z - A  </string>
    <string name="ordenarValorDesc">Ordenar por valor maior  </string>
    <string name="ordenarValorAsc">Ordenar por valor menor  </string>

    <string name="total_com_espaco">Total:  </string>
    <string name="cifra_com_espaco">R$ </string>
    <string name="pdf_gerado_com_sucesso_em">PDF gerado com sucesso em: </string>
    <string name="erro_ao_gerar_pdf">Erro ao gerar PDF: </string>
    <string name="cifra_com_espaco_e_sinal_de_subtracao">R$ -</string>
    <string name="cifra_com_espaco_e_sinal_de_adicao">R$ +</string>

    <string name="qtdItens">Itens:</string>

    <string name="minha_lista_de_contas_">minha_lista_de_contas_</string>
    <string name="pdf">.pdf</string>

    <string name="Entrada_tres_espaco_com_cifra">Entrada:   </string>
    <string name="Restante_espaco_com_cifra">Restante: </string>

    <string name="Data">Data</string>
    <string name="Nome">Nome</string>
    <string name="Preco">Preço</string>

    <string name="rb_pequeno">Pequeno</string>
    <string name="rb_medio">Médio</string>
    <string name="rb_grande">Grande</string>
    <string name="rb_cego">Cego</string>


    <string name="api_erro">API está fora do ar</string>

    <string name="oferta">Oferta:</string>
    <string name="alta">Alta:</string>
    <string name="baixa">Baixa:</string>
    <string name="desnecessario">Desnecessário</string>
    <string name="necessario">Necessário</string>

    <string name="textViewSaldoNecessarioTelaList">Necessário: R$</string>
    <string name="textViewSaldoDesnecessarioTelaList">Desnecessário: R$</string>
</resources>
