<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_nova_conta"
        android:title="@string/menu_nova_conta" />

    <item
        android:id="@+id/menu_usuario"
        android:title="@string/menu_usuario" />

    <item
        android:id="@+id/menu_sobre"
        android:title="@string/menu_sobre" />

    <item
        android:id="@+id/menu_criar_pdf"
        android:title="@string/menu_criar_pdf" />

    <item
        android:id="@+id/menu_selecionar_exclusao"
        android:title="@string/menu_selecionar_exclusao" />

    <item
        android:id="@+id/menu_excluir_selecionadas"
        android:title="@string/menu_excluir_selecionadas"
        android:visible="false" />

    <item
        android:id="@+id/menu_selecionar_todos"
        android:title="@string/menu_selecionar_todos"
        android:visible="false" />

    <item
        android:id="@+id/menu_cancelar_selecao"
        android:title="@string/menu_cancelar_selecao"
        android:visible="false" />
</menu>
