<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corDeFundoAplicativo"
    tools:context=".activities.ActivityTelaUsuario">

    <TextView
        android:id="@+id/textViewNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/textViewNomeUsuario"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/editTextNomeUsuario"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSaldoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/textViewSaldoUsuario"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/editTextSaldoUsuario"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeUsuario"
        tools:text="@string/saldo" />

    <Button
        android:id="@+id/btnSalvarUsuario"
        android:layout_width="162dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/botao"
        android:fontFamily="@font/minha_fonte_bold"
        android:onClick="salvarUsuario"
        android:text="@string/salvar"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSaldoUsuario" />

    <EditText
        android:id="@+id/editTextNomeUsuario"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borda_edittext"
        android:ems="10"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeUsuario" />

    <EditText
        android:id="@+id/editTextSaldoUsuario"
        android:layout_width="320dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/borda_edittext"
        android:ems="10"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSaldoUsuario" />

</androidx.constraintlayout.widget.ConstraintLayout>