<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewPagerSubtracao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_lista_cbp"
    tools:context=".activities.telas_conta.FragmentTelaContaFormatoListaSubtracao">


    <TextView
        android:id="@+id/textViewValorDaContaFormatoListaSubtracao"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/textViewValorDaConta"
        android:textColor="@color/corDoTitulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeDaContaFormatoListaSubtracao" />

    <EditText
        android:id="@+id/editTextValorContaFormatoListaSubtracao"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/input_saldo_azul_cbp"
        android:ems="10"
        android:hint="R$ 0,00"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/yellow"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewValorDaContaFormatoListaSubtracao"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorDaContaFormatoListaSubtracao" />

    <TextView
        android:id="@+id/textViewNomeDaContaFormatoListaSubtracao"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/textViewNomeDaConta"
        android:textColor="@color/corDoTitulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNomeDaContaFormatoListaSubtracao"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_nome_azul_cbp"
        android:ems="10"
        android:hint="@string/contaDeLuzHint"
        android:inputType="text|textCapSentences"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:textColor="@color/corLetraListaCbp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeDaContaFormatoListaSubtracao" />

    <Button
        android:id="@+id/btnSalvarContaFormatoListaSubtracao"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/botao"
        android:onClick="salvarNovaContaSubtracao"
        android:text="@string/salvar"
        android:textColor="@color/corLetraListaCbp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValorContaFormatoListaSubtracao" />
</androidx.constraintlayout.widget.ConstraintLayout>