<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewPagerContaSubtracao"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_lista_cbp"
    tools:context=".activities.telas_conta.FragmentTelaContaFormatoListaSubtracao">


    <include
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNomeDaContaSubtracao"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/textViewNomeDaConta"
        android:textColor="@color/corDoTitulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNomeContaSubtracao"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_nome_azul_cbp"
        android:paddingStart="15dp"
        android:ems="10"
        android:hint="@string/contaDeLuzHint"
        android:inputType="text|textCapSentences"
        android:padding="10dp"
        android:textColor="@color/corLetraListaCbp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNomeDaContaSubtracao" />

    <TextView
        android:id="@+id/textViewValorDaContaSubtracao"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/textViewValorDaConta"
        android:textColor="@color/corDoTitulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNomeContaSubtracao" />

    <EditText
        android:id="@+id/editTextValorContaSubtracao"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_saldo_azul_cbp"
        android:paddingStart="15dp"
        android:ems="10"
        android:hint="R$ 0,00"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textColor="@color/yellow"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewValorDaContaSubtracao" />

    <TextView
        android:id="@+id/textViewDataQueFoiGastoSubtracao"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/textViewDataQueFoiGasto"
        android:textColor="@color/corDoTitulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextValorContaSubtracao" />

    <EditText
        android:id="@+id/editTextDateSubtracao"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_saldo_azul_cbp"
        android:paddingStart="15dp"
        android:ems="10"
        android:hint="@string/editTextDateHint"
        android:inputType="date"
        android:padding="10dp"
        android:textColor="@color/corLetraListaCbp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDataQueFoiGastoSubtracao" />

    <ToggleButton
        android:id="@+id/toggleButtonNecessarioDesnecessario"
        android:layout_width="161dp"
        android:layout_height="50dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="50dp"
        android:textOn="Desnecessario"
        android:textOff="Necessario"
        android:background="@drawable/btn_necessario_tela_usuario_conta"
        android:text="ToggleButton"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/editTextDateSubtracao"
        app:layout_constraintTop_toBottomOf="@+id/editTextDateSubtracao" />

</androidx.constraintlayout.widget.ConstraintLayout>